--- a/app/src/main/res/layout/inventory_item.xml
+++ b/app/src/main/res/layout/inventory_item.xml
@@ -5,11 +5,22 @@
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp">
+    android:layout_margin="@dimen/default_margin"
+    android:padding="@dimen/default_padding"
+    android:background="@drawable/border">
 
     <TextView
         android:id="@+id/tv_inventory_item_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        tools:text="Item One"/>
+
+    <ImageView
+        android:id="@+id/iv_inventory_item_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Hello"/>
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_launcher_background"/>
 </LinearLayout>
