--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,8 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="default_margin">16dp</dimen>
+
+    <dimen name="default_padding">16dp</dimen>
+
+    <dimen name="default_text_size">16sp</dimen>
 </resources>
