--- a/app/src/main/res/layout/inventory_item.xml
+++ b/app/src/main/res/layout/inventory_item.xml
@@ -6,15 +6,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/default_margin"
-    android:padding="@dimen/default_padding"
+    android:padding="@dimen/inventory_item_padding"
     android:background="@drawable/border">
-
-    <TextView
-        android:id="@+id/tv_inventory_item_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        tools:text="Item One"/>
 
     <ImageView
         android:id="@+id/iv_inventory_item_image"
@@ -22,5 +15,34 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
-        android:src="@drawable/ic_launcher_background"/>
+        android:src="@drawable/default_image"
+        tools:ignore="ContentDescription" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/default_line_size"
+        android:layout_marginTop="@dimen/line_under_image_margin"
+        android:background="#000000" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tv_inventory_item_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:textStyle="bold"
+            tools:text="Item One"/>
+
+        <TextView
+            android:id="@+id/tv_inventory_item_quantity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            tools:text="2"
+            tools:ignore="RelativeOverlap" />
+    </RelativeLayout>
+
 </LinearLayout>
