--- a/app/src/main/res/layout/preferences.xml
+++ b/app/src/main/res/layout/preferences.xml
@@ -5,7 +5,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/default_padding"
     android:orientation="vertical">
+
+    <RelativeLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tv_use_mock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/preferences_use_mock_label"
+            android:layout_alignParentStart="true"/>
+        <Switch
+            android:id="@+id/switch_use_mock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_alignParentEnd="true"
+            tools:ignore="RelativeOverlap" />
+    </RelativeLayout>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -16,15 +36,15 @@
             android:id="@+id/tv_websocket_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="websocket address: "/>
+            android:text="@string/preferences_websocket_ip_label"
+            android:layout_weight="1"/>
         <EditText
             android:id="@+id/et_websocket_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:clickable="true"
-            android:focusable="true"/>
+            android:focusable="true"
+            android:layout_weight="1"/>
     </LinearLayout>
 
     <LinearLayout
@@ -36,15 +56,15 @@
             android:id="@+id/tv_http_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="http address: "/>
+            android:text="@string/preferences_http_ip_label"
+            android:layout_weight="1"/>
         <EditText
             android:id="@+id/et_http_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:clickable="true"
-            android:focusable="true"/>
+            android:focusable="true"
+            android:layout_weight="1"/>
     </LinearLayout>
 
 </LinearLayout>
