--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,12 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="default_margin">16dp</dimen>
-
     <dimen name="default_padding">16dp</dimen>
-
     <dimen name="default_text_size">16sp</dimen>
+    <dimen name="default_line_size">1dp</dimen>
+
+    <!-- Inventory Item -->
+    <dimen name="inventory_item_padding">4dp</dimen>
+    <dimen name="border_radius">4dp</dimen>
+    <dimen name="line_under_image_margin">2dp</dimen>
 </resources>
