--- a/app/src/main/res/layout/inventory_item.xml
+++ b/app/src/main/res/layout/inventory_item.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/ll_inventory_item"
+<android.support.constraint.ConstraintLayout android:id="@+id/ll_inventory_item"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/default_margin"
     android:padding="@dimen/inventory_item_padding"
-    android:background="@drawable/border">
+    android:background="@drawable/border"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:id="@+id/iv_inventory_item_image"
@@ -16,33 +16,47 @@
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
         android:src="@drawable/default_image"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/view_divider"
         tools:ignore="ContentDescription" />
 
     <View
+        android:id="@+id/view_divider"
         android:layout_width="match_parent"
         android:layout_height="@dimen/default_line_size"
         android:layout_marginTop="@dimen/line_under_image_margin"
-        android:background="#000000" />
+        android:layout_marginBottom="@dimen/line_under_image_margin"
+        android:background="#000000"
+        app:layout_constraintTop_toBottomOf="@id/iv_inventory_item_image"
+        app:layout_constraintBottom_toTopOf="@id/tv_inventory_item_text"/>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_inventory_item_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:textStyle="bold"
-            tools:text="Item One"/>
+    <TextView
+        android:id="@+id/tv_inventory_item_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:textAlignment="textStart"
+        android:textStyle="bold"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/tv_inventory_item_quantity"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_divider"
+        tools:text="Item One" />
 
-        <TextView
-            android:id="@+id/tv_inventory_item_quantity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            tools:text="2"
-            tools:ignore="RelativeOverlap" />
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/tv_inventory_item_quantity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/view_divider"
+        app:layout_constraintStart_toEndOf="@id/tv_inventory_item_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        android:textAlignment="textEnd"
+        tools:text="2" />
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
