--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,55 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_inventory"
+    <ScrollView
+        android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"/>
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="@dimen/default_title_text_size"
+                android:text="@string/title_frequent"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/default_line_size"
+                android:layout_marginTop="@dimen/line_under_image_margin"
+                android:layout_marginBottom="@dimen/line_under_image_margin"
+                android:background="#000000"/>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_frequent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:nestedScrollingEnabled="false"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="@dimen/default_title_text_size"
+                android:text="@string/title_all_items"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/default_line_size"
+                android:layout_marginTop="@dimen/line_under_image_margin"
+                android:layout_marginBottom="@dimen/line_under_image_margin"
+                android:background="#000000"/>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_inventory"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:nestedScrollingEnabled="false"/>
+        </LinearLayout>
+    </ScrollView>
 
     <ProgressBar
         android:id="@+id/pb_main_loader"
