--- a/app/src/main/res/layout/inventory_item.xml
+++ b/app/src/main/res/layout/inventory_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout android:id="@+id/ll_inventory_item"
+<android.support.constraint.ConstraintLayout android:id="@+id/layout_inventory_item"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/default_margin"
     android:padding="@dimen/inventory_item_padding"
@@ -13,10 +13,12 @@
         android:id="@+id/iv_inventory_item_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/line_under_image_margin"
         android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
+        android:scaleType="fitStart"
         android:src="@drawable/default_image"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/view_divider"
         tools:ignore="ContentDescription" />
@@ -25,11 +27,11 @@
         android:id="@+id/view_divider"
         android:layout_width="match_parent"
         android:layout_height="@dimen/default_line_size"
-        android:layout_marginTop="@dimen/line_under_image_margin"
-        android:layout_marginBottom="@dimen/line_under_image_margin"
+        android:elevation="2dp"
         android:background="#000000"
-        app:layout_constraintTop_toBottomOf="@id/iv_inventory_item_image"
-        app:layout_constraintBottom_toTopOf="@id/tv_inventory_item_text"/>
+        app:layout_constraintBottom_toTopOf="@id/tv_inventory_item_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 
     <TextView
@@ -44,7 +46,6 @@
         app:layout_constraintEnd_toStartOf="@id/tv_inventory_item_quantity"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/view_divider"
         tools:text="Item One" />
 
     <TextView
