--- a/app/src/main/res/layout/tiebreaker_dialog.xml
+++ b/app/src/main/res/layout/tiebreaker_dialog.xml
@@ -5,13 +5,18 @@
     android:layout_height="wrap_content"
     android:padding="@dimen/default_padding">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Please select the item you removed from the dropdown below."/>
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/default_margin"
         android:weightSum="2">
         <TextView
-            android:id="@+id/dsafjoisdafjioasdf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
