--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,7 +10,13 @@
 
     <item
         android:id="@+id/menu_settings"
-        android:orderInCategory="2"
-        android:title="@string/settings_name"
+        android:orderInCategory="99"
+        android:title="@string/menu_settings"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_reset"
+        android:orderInCategory="100"
+        android:title="@string/menu_reset"
+        app:showAsAction="never"/>
 </menu>
